...
                                Align(
                                  alignment: AlignmentDirectional(-1.0, 0.0),
                                  child: Padding(
                                    padding: EdgeInsetsDirectional.fromSTEB(
                                        15.0, 0.0, 0.0, 0.0),
                                    child: Text(
                                      'Log In',
                                      style: FlutterFlowTheme.of(context)
                                          .displayMedium
                                          .override(
                                            fontFamily:
                                                FlutterFlowTheme.of(context)
                                                    .displayMediumFamily,
...
                                Padding(
                                  padding: EdgeInsetsDirectional.fromSTEB(
                                      15.0, 20.0, 15.0, 8.0),
                                  child: Container(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: ValueKey('Login-Email_xapx'),
                                      controller:
                                          _model.loginEmailTextController,
                                      focusNode: _model.loginEmailFocusNode,
                                      autofocus: false,
                                      obscureText: false,
                                      decoration: InputDecoration(
...
                                              color: Colors.black,
                                              letterSpacing: 0.0,
                                              useGoogleFonts:
                                                  GoogleFonts.asMap()
                                                      .containsKey('Roboto'),
                                            ),
                                        hintText: 'Email...',
                                        hintStyle: FlutterFlowTheme.of(context)
                                            .labelMedium
                                            .override(
                                              fontFamily: 'Roboto',
                                              letterSpacing: 0.0,
                                              useGoogleFonts:
...
                                Padding(
                                  padding: EdgeInsetsDirectional.fromSTEB(
                                      15.0, 0.0, 15.0, 8.0),
                                  child: Container(
                                    width: double.infinity,
                                    child: TextFormField(
                                      key: ValueKey('Login-Password_i9du'),
                                      controller:
                                          _model.loginPasswordTextController,
                                      focusNode: _model.loginPasswordFocusNode,
                                      autofocus: false,
                                      obscureText:
                                          !_model.loginPasswordVisibility,
...
                                              color: Colors.black,
                                              letterSpacing: 0.0,
                                              useGoogleFonts:
                                                  GoogleFonts.asMap()
                                                      .containsKey('Roboto'),
                                            ),
                                        hintText: 'Password...',
                                        hintStyle: FlutterFlowTheme.of(context)
                                            .labelMedium
                                            .override(
                                              fontFamily: 'Roboto',
                                              letterSpacing: 0.0,
                                              useGoogleFonts:
...
                              height: 70.0,
                              decoration: BoxDecoration(),
                            ),
                            Padding(
                              padding: EdgeInsets.all(15.0),
                              child: FFButtonWidget(
                                key: ValueKey('Button_n68z'),
                                onPressed: () async {
                                  logFirebaseEvent(
                                      'LOG_IN_PAGE_LOG_IN_BTN_ON_TAP');
                                  logFirebaseEvent('Button_auth');
                                  GoRouter.of(context).prepareAuthEvent();

...
