...
                            0.0, 15.0, 0.0, 15.0),
                        child: Row(
                          mainAxisSize: MainAxisSize.max,
                          mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                          children: [
                            FFButtonWidget(
                              key: ValueKey('LogIn_61wv'),
                              onPressed: () async {
                                logFirebaseEvent(
                                    'START_UP_PAGE_PAGE_LogIn_ON_TAP');
                                logFirebaseEvent('LogIn_navigate_to');

                                context.pushNamed(
...
                                );

                                logFirebaseEvent(
                                    'Register_google_analytics_event');
                                logFirebaseEvent('register');
                              },
                              text: 'REGISTER',
                              options: FFButtonOptions(
                                width: 170.0,
                                height: 60.0,
                                padding: EdgeInsetsDirectional.fromSTEB(
                                    16.0, 0.0, 16.0, 0.0),
                                iconPadding: EdgeInsetsDirectional.fromSTEB(
...
